# ViconGwan

./: CMakeLists.txt  How to update the code.md  Readme.md
boost1_68/lib64-msvc-14.0/: DEPENDENCY_VERSIONS.txt
externalDependencies/vicon-datastream-sdk/: ViconDataStreamSDK_CPP.lib  ViconDataStreamSDK_CPPRetimerTest.cpp
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconCGStream/: ViconCGStream.vcxproj
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconCGStreamClient/: ViconCGStreamClient.vcxproj
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconCGStreamClientSDK/: ViconCGStreamClientSDK.vcxproj
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDKCore/: ViconDataStreamSDKCore.vcxproj.filters
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDKCoreUtils/: ViconDataStreamSDKCoreUtils.vcxproj.filters
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_C/: ViconDataStreamSDK_C.vcxproj  ViconDataStreamSDK_C.vcxproj.filters
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPP/: ViconDataStreamSDK_CPP.vcxproj.filters
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPPRetimerTest/: ViconDataStreamSDK_CPPRetimerTest.vcxproj  ViconDataStreamSDK_CPPRetimerTest.vcxproj.filters
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPPTest/: ViconDataStreamSDK_CPPTest.vcxproj
externalDependencies/vicon-datastream-sdk/Vicon/CrossMarket/StreamCommon/: StreamCommon.vcxproj  StreamCommon.vcxproj.filters
externalDependencies/vicon-datastream-sdk/ViconDataStreamSDKSource-source/: ViconDataStreamSDKSourcePackagingWin64.sln
include/: ViconClient.h
src/: ViconClient.cpp  main.cpp
(+28 files in other folders)
